Added form standards

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <div class="banner-content">
     <h1>Find cleaning professionals</h1>
     <h2>in your area</h2>
-    <form class="form-inline">
+    <form class="form-inline cleaner-form">
       <select class="form-control form-control-lg">
         <option>General Cleaning</option>
         <option>Ironing</option>
@@ -10,7 +10,7 @@
         <option>Pet Cleanup</option>
       </select>
       <input type="text" name="location" class="form-control form-control-lg">
-      <button class="btn btn-primary btn-lg">Search</button>
+      <button class="btn btn-watermelon btn-lg">Search</button>
     </form>
     <div class="avg-rate">
       <h4> Average hourly rate: 12€</h4>
