started to implement seeds.rb and simple form for, but not working so far

--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,6 +1,7 @@
 <div class="simple-form">
 <%= simple_form_for [@user, @booking] do |f| %>
 <%= f.input :date, input_html: {class: "datepicker"}, placeholder: "Date", as: :string %>
+<%= f.input :payment_method, :collection => @payment  %>
 <%= f.submit "Book", class: "btn btn-danger" %>
 <% end %>
 </div>
