--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,18 +1,14 @@
 <h2>Booking with <%= User.find(@booking.cleaner_id).first_name %></h2>
 
 <div class="cleaner-view">
-<% if current_user.role_cleaner%>
-  <p>When: <%= @booking.date %> for <%= @booking.hrs_work %> hours</p>
-  <p>Salary: <%= @booking.total_price %> $ </p>
-  <p> Message: <%= @booking.message %></p>
-  <%= form_for @booking do |f| %>
-    <%= f.button "Accept", name: "status", value: "accepted", class: "btn btn-success" %>
-    <%= f.button "Decline", name: "status", value: "declined", class: "btn btn-danger" %>
-  <% end %>
-  </div>
+  <% if current_user.role_cleaner? %>
+    <p>When: <%= @booking.date %> for <%= @booking.hrs_work %> hours</p>
+    <p>Salary: <%= @booking.total_price %> $ </p>
+    <p> Message: <%= @booking.message %></p>
   <% else %>
-  <p>Booking details: <%= @booking.date %> for <%= @booking.hrs_work %> hours </p>
-  <p>Amount to pay: <%= @booking.total_price %> $ </p>
-  <p>Address: <%= @booking.address %> $ </p>
-  <p>Status of booking: <%= @booking.status %> </p>
-<% end %>
+    <p>Booking details: <%= @booking.date %> for <%= @booking.hrs_work %> hours </p>
+    <p>Amount to pay: <%= @booking.total_price %> $ </p>
+    <p>Address: <%= @booking.address %> $ </p>
+    <p>Status of booking: <%= @booking.status %> </p>
+  <% end %>
+</div>
